Top app bar delvis implementert

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,5 @@
     <string name="bilder">Bilder</string>
     <string name="detaljer">Detaljer</string>
     <string name="betaling">Betaling</string>
+    <string name="back">Back</string>
 </resources>
