Starter på main side. Lagt til overskrift og knapper

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,5 @@
     <string name="detaljer">Detaljer</string>
     <string name="betaling">Betaling</string>
     <string name="back">Back</string>
+    <string name="velg_bilde_basert_paa">Velg bilde basert på</string>
 </resources>
