--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,8 +9,14 @@
     <string name="back">Back</string>
     <string name="velg_bilde_basert_paa">Velg bilde basert på</string>
     <string name="antall_bilder_valgt">Antall bilder valgt: %1$s</string>
-    <string name="totalpris">Totalpris: %1$s</string>
+    <string name="totalpris_med_pris">Totalpris: %1$s</string>
     <string name="til_betaling">Til betaling</string>
     <string name="kategori">Kategori</string>
     <string name="kunstner">Kunstner</string>
+    <string name="title_wildflowers">Wildflowers</string>
+    <string name="delete">Delete</string>
+    <string name="totalpris">"Totalpris: "</string>
+    <string name="betalingsvalg">Betalingsvalg</string>
+    <string name="ikke_implementert">Ikke implementert</string>
+    <string name="betal">Betal!</string>
 </resources>
